# arc-agi

./: .gitignore  CLAUDE.md  ls20_play.json  play.py  pyproject.toml  replay.py  requirements.txt  run_agent.py  run_offline.py  visualize.py
.claude/: settings.json
.claude/rules/: arc-agi-api.md  architecture.md  code-style.md  design-patterns.md  document-schemas.md  failure-taxonomy.md  testing.md
agent/: actions.py  agent.py  const.py  fmt.py  grid_utils.py  world_model.py
agent/objects/: __init__.py  camera.py  manager.py
agent/prompts/: __init__.py  decide.py  evaluate.py  hypothesize.py  incident.py  observe.py  scan.py  system.py  update.py
agent/steps/: __init__.py  (+7 more)
agents/: __init__.py
code/: OVERVIEW.md  README.md
configs/: default.yaml
docs/: structure.md
experiments/: agent.md  agent_structure.md  agent_thinking_steps.md  agent_world_model.md  experiment.md  game_example.md  idea.md  memo.md  object_define.md  object_llm_integration.md  prototype_structure.md  test_prompt.md  thinking_process.md  world_model.md
scripts/: analyze_frame.py  save_evaluation.py  save_strategy.py  validate.py  validate_docs.py  validate_structure.py
tests/: test_base.py  test_client.py  test_game_runner.py  test_llm_agent.py  test_prompt_builder.py  test_response_parser.py  test_state_extractor.py  test_tracker.py
training/: config.py  dpo_trainer.py  evaluator.py  goal_generator.py  loop.py  model_loader.py  rewards.py  server.py  train_local.py  trajectory_collector.py
utils/: __init__.py  logger.py
visualizer/: colors.py  converter.py  replay.py
(+104 files in other folders)
