[project]
name = "arc-agi-3-agent"
version = "0.1.0"
description = "ARC-AGI-3 Game Agent with Planner/Generator/Evaluator architecture"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.6",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
